karnc/tests/fixtures/positive/68_context_exports_opaque/src/commerce/orders.karn
context commerce.orders {
  exports opaque { OrderId }

  type OrderId = String where Matches("ORD-[0-9]+")
}
