karnc/tests/fixtures/negative/79_alias_used_twice/src/commerce/payment.karn
context commerce.payment

exports opaque { AuthId }

type AuthId = String where Matches("AUTH-[0-9]{8}")
